--- a/style.css
+++ b/style.css
@@ -302,4 +302,109 @@
     text-underline-offset: 0.2rem;
     -webkit-text-stroke-width: 0.07rem;
   }
+
+  /* product overview*/
+  .main__product-overview-block {
+    min-height: 70rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 7rem;
+    overflow: hidden;
+  }
+
+  .product-overview__title-block {
+    min-height: 20rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 6rem;
+  }
+
+  .product-overview__title {
+    font-size: 5.8rem;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+
+  .product-overview__content-block {
+    min-height: 30rem;
+    width: 100%;
+  }
+
+  .product-overview__content {
+    min-height: 45rem;
+    width: 100%;
+    /* display: grid;
+    grid-template-columns: repeat(3, 35rem);
+    justify-content: space-around; */
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 6rem;
+  }
+
+  .product-overview__content-preview {
+    flex-basis: 27%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 20rem 1fr;
+    gap: 2rem;
+  }
+
+  .content-preview__image-block {
+    background: rgb(0, 87, 128);
+  }
+
+  .content-preview__info-block {
+    display: grid;
+    grid-template-rows: 3rem 1fr;
+    gap: 3rem;
+  }
+
+  .content-preview__info-title {
+    font-size: 2.1rem;
+  }
+
+  .content-preview__info-text {
+    font-size: 1.76rem;
+  }
+
+  .product-overview__text-block {
+    min-height: 7rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .product-overview__text {
+    font-size: 2.6rem;
+    transition: all 0.2s;
+    cursor: pointer;
+  }
+
+  .product-overview__text:hover {
+    transform: translateX(-0.35rem);
+    transition: 0.3s;
+  }
+
+  .product-overview__text-arrow-right {
+    display: inline-flex;
+    margin-left: 2rem;
+    vertical-align: middle;
+    width: 3rem;
+    transition: all 0.2s;
+    pointer-events: none;
+  }
+
+  .text-arrow-right {
+    width: 100%;
+  }
+
+  .product-overview__text:hover .product-overview__text-arrow-right {
+    transform: translateX(1rem);
+    transition: 0.3s;
+  }
 }
