--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+@media screen and (max-width: 1023px) {
+  /* no content */
+  html {
+    background: url(assets/This\ page\ has\ been\ blocked\ by\ an\ extension\ image.png)
+      no-repeat center;
+    background-color: lightgray;
+    background-attachment: fixed;
+    place-items: center;
+  }
+
+  html:hover {
+    background: url(assets/This\ page\ has\ been\ blocked\ by\ an\ extension\ image.png)
+      no-repeat center;
+    background-color: gainsboro;
+    background-attachment: fixed;
+  }
+
+  body {
+    display: none;
+  }
+}
+
+
 @media screen and (min-width: 1024px) {
   /* header section */
   .header-block {
