--- a/style.css
+++ b/style.css
@@ -501,4 +501,89 @@
   .scroll-tab-image {
     width: 100%;
   }
+
+  /* benefits */
+  .main__benefits-block {
+    min-height:40rem;
+    display:flex;
+    flex-direction: column;
+    width:100%;   
+    padding:6%; 
+    margin-top:5rem;
+  }
+
+  .benefits__title-block {
+    width:100%;
+    min-height:7rem; 
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-bottom:6rem;
+  }
+
+  .benefits__title {
+    font-size:5.5rem;
+    font-weight:500;
+    line-height:1.3;
+  }
+
+  .main__benefits-preview-block {
+    width:100%;
+    display:flex; 
+    gap:7rem;
+  }
+
+  .benefits__preview-block {
+    flex-basis:32%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between; 
+  }
+
+  .benefits__preview-image-block {
+    min-height:30rem;
+    width:100%;  
+    display:grid;
+    place-items: center;
+  } 
+
+  .benefits__preview-image-container {
+    height:80%;
+    width: 25rem; 
+  }
+
+  .benefits__preview-image {
+    width:100%;     
+  }
+
+  .benefits__preview-info-block {
+    min-height:56%;
+    width:100%; 
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .preview-info__title-block {  
+    min-height:8rem; 
+    margin-bottom:3rem;
+  }
+
+  .preview-info__title {
+    font-size:3rem;
+  }
+
+  .preview-info__text-block { 
+    width:100%; 
+    display:flex;
+    flex:1;
+  }
+
+  .preview-info__text {
+    font-size:1.8rem;  
+  }
+
+  .benefits__use-cases-text-block {
+    margin-top:8rem;
+  }
 }
