--- a/style.css
+++ b/style.css
@@ -682,4 +682,96 @@
   .award-winner__link-text {
     font-size: 2.5rem;
   }
+
+  /* Organizations */
+  .main__orgs-block {
+    min-height: 50rem;
+    width: 100%;
+  }
+
+  .main__orgs-text-block {
+    width: 100%;
+    min-height: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2% 15%;
+  }
+
+  .main__orgs-text {
+    font-size: 5.5rem;
+    font-weight: 500;
+    line-height: 1.3;
+    text-align: center;
+  }
+
+  .main__orgs-logo-block {
+    width: 100%;
+    height: 26rem;
+    display: flex;
+    align-items: center;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    overflow: auto;
+    gap: 3rem;
+  }
+
+  .main__orgs-logo-container-block {
+    min-width: 24rem;
+    height: 17rem;
+    scroll-snap-align: start;
+    border-radius: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main__orgs-logo-container {
+    width: 70%;
+    height: 70%;
+  }
+
+  .main__orgs-logo {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+  .main__orgs-logo-container-block1,
+  .main__orgs-logo-container-block5,
+  .main__orgs-logo-container-block9,
+  .main__orgs-logo-container-block13,
+  .main__orgs-logo-container-block17,
+  .main__orgs-logo-container-block21,
+  .main__orgs-logo-container-block25 {
+    background: #f25d5d;
+  }
+
+  .main__orgs-logo-container-block2,
+  .main__orgs-logo-container-block6,
+  .main__orgs-logo-container-block10,
+  .main__orgs-logo-container-block14,
+  .main__orgs-logo-container-block18,
+  .main__orgs-logo-container-block22,
+  .main__orgs-logo-container-block26 {
+    background: #e7d8c8;
+  }
+
+  .main__orgs-logo-container-block3,
+  .main__orgs-logo-container-block7,
+  .main__orgs-logo-container-block11,
+  .main__orgs-logo-container-block15,
+  .main__orgs-logo-container-block19,
+  .main__orgs-logo-container-block23 {
+    background: #bbb809;
+  }
+
+  .main__orgs-logo-container-block4,
+  .main__orgs-logo-container-block8,
+  .main__orgs-logo-container-block12,
+  .main__orgs-logo-container-block16,
+  .main__orgs-logo-container-block20,
+  .main__orgs-logo-container-block24 {
+    background: #d0dcdc;
+  }
 }
