--- a/style.css
+++ b/style.css
@@ -1,27 +1,56 @@
 @media screen and (max-width: 1023px) {
   /* no content */
-  html {
-    background: url(assets/This\ page\ has\ been\ blocked\ by\ an\ extension\ image.png)
-      no-repeat center;
-    background-color: lightgray;
-    background-attachment: fixed;
-    place-items: center;
+  header, main, footer {
+    display:none;
   }
 
-  html:hover {
+  /* displayable content */
+  body { 
+    background: url(assets/This\ page\ has\ been\ blocked\ by\ an\ extension\ image.png)
+    no-repeat center;
+  background-color: lightgray;
+  background-attachment: fixed;
+  place-items: center;
+  }
+
+
+  body:hover  {
     background: url(assets/This\ page\ has\ been\ blocked\ by\ an\ extension\ image.png)
       no-repeat center;
     background-color: gainsboro;
     background-attachment: fixed;
   }
 
-  body {
-    display: none;
+/* error message */
+  .error__message-text-block {
+   grid-area: error;
+   width:100%;
+    height:100%;
+    background:transparent; 
+    text-align:center;
+    display:none;
+  }
+
+  .error__message-text {
+    font-size:4rem;
+    font-weight:500;
+    font-variant: small-caps;
+    line-height: 6;
+  
+  }
+
+  html:hover .error__message-text-block {
+    display:block; 
   }
 }
 
 @media screen and (min-width: 1024px) {
-  /* header section */
+   /* error message */
+   .error__message-text-block {
+    display:none;
+  }
+
+    /* header section */
   .header-block {
     width: 100%;
     grid-area: header;
